netpol/1.network.policy.deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all
  namespace: vote
spec:
  podSelector: {}
  policyTypes:
  - Ingress
